Making a few GUI changes
Logo now has color and is not all the way transparent.
the buttons (still non-functional) are now not repeating themselves.
Menu logo needs to be smaller unfortunately..

--- a/hkm-progress-button-master/sample/src/main/res/values/arrays.xml
+++ b/hkm-progress-button-master/sample/src/main/res/values/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="places">
-        <item>Domesttic Violence</item>
+        <item>Domestic Violence</item>
         <item>Robbery</item>
         <item>Car Jacking</item>
         <item>Murder</item>
