--- a/hkm-progress-button-master/sample/src/main/res/layout/nav_header_main.xml
+++ b/hkm-progress-button-master/sample/src/main/res/layout/nav_header_main.xml
@@ -17,14 +17,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
+        app:srcCompat="@drawable/ic_launcher_1"
         android:id="@+id/imageView"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Facer"
+        android:text="F.A.C.E.R"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
